# hyper-modern

./: .flake8  README.md  pyproject.toml
docs/: conf.py
src/hyper_modern/: __init__.py  wikipedia.py
tests/: conftest.py  test_console.py  test_wikipedia.py
