[tool.poetry]
name = "hyper-modern"
version = "0.1.0"
authors = ["bluemania <damnthatswack@hotmail.com>"]
description = "The hypermodern Python project"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/bluemania/hyper-modern"
repository = "https://github.com/bluemania/hyper-modern"
keywords = ["hypermodern"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
coverage = {extras = ["toml"], version = "^5.2.1"}
pytest-cov = "^2.10.0"
pytest-mock = "^3.2.0"

[tool.poetry.scripts]
hyper-modern = "hyper_modern.console:main"

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["hyper_modern"]

# pyproject.toml
[tool.coverage.report]
fail_under = 100
show_missing = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

