[tool.poetry]
name = "hyper-modern"
version = "0.1.0"
authors = ["bluemania <damnthatswack@hotmail.com>"]
description = "The hypermodern Python project"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/bluemania/hyper-modern"
repository = "https://github.com/bluemania/hyper-modern"
keywords = ["hypermodern"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
requests = "^2.24.0"
pre-commit = "^2.6.0"
desert = "^2020.1.6"
marshmallow = "^3.7.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
coverage = {extras = ["toml"], version = "^5.2.1"}
pytest-cov = "^2.10.0"
pytest-mock = "^3.2.0"
flake8-isort = "^3.0.1"
flake8-bugbear = "^20.1.4"
flake8-bandit = "^2.1.2"
flake8 = "^3.8.3"
black = "^19.10b0"
flake8-black = "^0.2.1"
mypy = "^0.782"
flake8-annotations = "^2.3.0"

[tool.poetry.scripts]
hyper-modern = "hyper_modern.console:main"

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["hyper_modern"]

[tool.coverage.report]
fail_under = 100
show_missing = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
